--- a/my-shop/public/style.css
+++ b/my-shop/public/style.css
@@ -1,13 +1,16 @@
 :root {
-  --primary: #2c3e50;
-  --secondary: #3498db;
-  --accent: #e74c3c;
-  --light: #ecf0f1;
-  --dark: #2c3e50;
-  --gray: #95a5a6;
-  --light-gray: #f5f5f5;
+  --primary: #87C159;
+  --secondary: #FDB10B;
+  --accent: #058240;
+  --light: #FDB10B;
+  --dark: #222222;
+  --gray: #F3C301;
+  --light-gray: #FEE3A2;
   --white: #ffffff;
-  --shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  --shadow: 0 2px 10px rgba(0, 255, 128, 0.1);
+  --success: #FDB10B; /* Яскраво-зелений */
+  --white: #ffffff;
+  --shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 * {
@@ -191,7 +194,7 @@ body {
 
 .products-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 20px;
 }
 
@@ -222,16 +225,16 @@ body {
 }
 
 .product-title {
-  font-size: 1rem;
-  margin-bottom: 10px;
-  height: 40px;
+  font-size: 0.7rem;
+  margin-bottom: 0px;
+  height: 90px;
   overflow: hidden;
 }
 
 .product-price {
   color: var(--accent);
   font-weight: bold;
-  font-size: 1.2rem;
+  font-size: 0.9rem;
   margin: 10px 0;
 }
 
@@ -278,10 +281,10 @@ body {
   bottom: 20px;
   right: 20px;
   padding: 15px 25px;
-  background-color: var(--success);
-  color: var(--white);
+  background-color: #87C159; /* Зелений колір для успіху */
+  color: #ffffff;            /* Білий текст */
   border-radius: 4px;
-  box-shadow: var(--shadow);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   transform: translateY(100px);
   opacity: 0;
   transition: all 0.3s ease;
@@ -292,6 +295,7 @@ body {
   transform: translateY(0);
   opacity: 1;
 }
+
 
 /* Адаптивність */
 @media (max-width: 768px) {
